--- a/css/app.css
+++ b/css/app.css
@@ -1,5 +1,7 @@
 .container {
     background-image: url(../images/photo-1452860606245-08befc0ff44b.jpg);
+    width: 100%;
+    max-width: 5184px;
     /*    background: cover;*/
 }
 
@@ -11,7 +13,7 @@
 
 .Aname {
     color: #1F3440;
-    font-family: font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
     font-size: 25px;
 }
 
@@ -206,12 +208,19 @@ xrotate-1
         opacity: 0;
     }
 }
+
 .empty {
-    height:100px;
+    height: 100px;
 }
 
+img .projects {
+    height: 1000px;
+    width: 1000px;
+}
 
-
-.rotate-1 {
-    text-size:20px;
+.titleP {
+    font-size: 30px;
+    font-family: 'Roboto Condensed', sans-serif;
+    color: #120033;
+    text-align: center;
 }
