--- a/css/app.css
+++ b/css/app.css
@@ -2,6 +2,7 @@
     background-image: url(../images/photo-1452860606245-08befc0ff44b.jpg);
     width: 100%;
     max-width: 5184px;
+    height: auto;
     /*    background: cover;*/
 }
 
@@ -219,7 +220,7 @@ xrotate-1
 }
 
 .titleP {
-    font-size: 30px;
+    font-size: 50px;
     font-family: 'Roboto Condensed', sans-serif;
     color: #120033;
     text-align: center;
@@ -421,4 +422,135 @@ On hover (or on touch) we will set the opacity to 1 and translate the figcaption
 
 .cs-style-1 figcaption a {
     margin-top: 30px;
+}
+
+
+/*************************************************************************Shape hover Effect*****************/
+
+.grid {
+    margin: 40px auto 120px;
+    max-width: 1000px;
+    width: 90%;
+}
+
+.grid a {
+    float: left;
+    max-width: 250px;
+    width: 25%;
+    color: #333;
+}
+
+.grid a:nth-child(odd) {
+    margin: 30px 0 -30px 0;
+}
+
+.grid figure {
+    position: relative;
+    overflow: hidden;
+    margin: 5px;
+    background: #333;
+}
+
+.grid figure img {
+    position: relative;
+    display: block;
+    width: 100%;
+    opacity: 0.7;
+    transition: opacity 0.3s;
+}
+
+.grid figcaption {
+    position: absolute;
+    top: 0;
+    z-index: 11;
+    padding: 10px;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+}
+
+.grid figcaption h2 {
+    margin: 0 0 20px 0;
+    color: #3498db;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-weight: 300;
+    font-size: 130%;
+    transition: transform 0.3s;
+}
+
+.grid figcaption p {
+    padding: 0 20px;
+    color: #aaa;
+    font-weight: 300;
+    transition: opacity 0.3s, transform 0.3s;
+}
+
+.grid figcaption h2,
+.grid figcaption p {
+    transform: translateY(50px);
+}
+
+.grid figure button {
+    position: absolute;
+    padding: 4px 20px;
+    border: none;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-weight: bold;
+    transition: opacity 0.3s, transform 0.3s;
+}
+
+.grid figcaption,
+.grid figcaption h2,
+.grid figcaption p,
+.grid figure button {
+    backface-visibility: hidden;
+}
+
+.grid svg {
+    position: absolute;
+    top: -1px;
+    /* fixes rendering issue in FF */
+    z-index: 10;
+    width: 100%;
+    height: 100%;
+}
+
+The fill color of the path will be white: .grid svg path {
+    fill: #fff;
+}
+
+.grid a:hover figure img {
+    opacity: 1;
+}
+
+.grid a:hover figcaption h2,
+.grid a:hover figcaption p {
+    transform: translateY(0);
+}
+
+.grid a:hover figcaption p {
+    opacity: 0;
+}
+
+.demo-1 body {
+    background: #3498db;
+}
+
+.demo-1 .grid figure button,
+.demo-3 .grid figure button {
+    top: 50%;
+    left: 50%;
+    border: 3px solid #fff;
+    background: transparent;
+    color: #fff;
+    opacity: 0;
+    transform: translateY(-50%) translateX(-50%) scale(0.25);
+}
+
+.demo-1 .grid a:hover figure button,
+.demo-3 .grid a:hover figure button {
+    opacity: 1;
+    transform: translateY(-50%) translateX(-50%) scale(1);
 }
