--- a/css/app.css
+++ b/css/app.css
@@ -1,19 +1,19 @@
 .container {
-    background: url('http://thecodeplayer.com/u/m/b1.png') no-repeat center center fixed;
+    background: #2B2153;
     background-size: cover;
     width: 100%;
-    max-width: 5184px;
+    max-width: 1366 px;
     /*    background: cover;*/
 }
 
 .navname {
-    color: #120033;
+    color: #4C30C5;
     font-family: 'Poiret One', cursive;
     font-size: 25px;
 }
 
 .Aname {
-    color: #1F3440;
+    color: #4C30C5;
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 25px;
 }
@@ -26,188 +26,6 @@
 .cd-headline.loading-bar .cd-words-wrapper {
     overflow: hidden;
     vertical-align: top;
-}
-
-
-/* --------------------------------
-
-xrotate-1
-
--------------------------------- */
-
-.cd-headline.rotate-1 .cd-words-wrapper {
-    -webkit-perspective: 300px;
-    -moz-perspective: 300px;
-    perspective: 300px;
-}
-
-.cd-headline.rotate-1 b {
-    opacity: 0;
-    -webkit-transform-origin: 50% 100%;
-    -moz-transform-origin: 50% 100%;
-    -ms-transform-origin: 50% 100%;
-    -o-transform-origin: 50% 100%;
-    transform-origin: 50% 100%;
-    -webkit-transform: rotateX(180deg);
-    -moz-transform: rotateX(180deg);
-    -ms-transform: rotateX(180deg);
-    -o-transform: rotateX(180deg);
-    transform: rotateX(180deg);
-}
-
-.cd-headline.rotate-1 b.is-visible {
-    opacity: 1;
-    -webkit-transform: rotateX(0deg);
-    -moz-transform: rotateX(0deg);
-    -ms-transform: rotateX(0deg);
-    -o-transform: rotateX(0deg);
-    transform: rotateX(0deg);
-    -webkit-animation: cd-rotate-1-in 1.2s;
-    -moz-animation: cd-rotate-1-in 1.2s;
-    animation: cd-rotate-1-in 1.2s;
-}
-
-.cd-headline.rotate-1 b.is-hidden {
-    -webkit-transform: rotateX(180deg);
-    -moz-transform: rotateX(180deg);
-    -ms-transform: rotateX(180deg);
-    -o-transform: rotateX(180deg);
-    transform: rotateX(180deg);
-    -webkit-animation: cd-rotate-1-out 1.2s;
-    -moz-animation: cd-rotate-1-out 1.2s;
-    animation: cd-rotate-1-out 1.2s;
-}
-
-@-webkit-keyframes cd-rotate-1-in {
-    0% {
-        -webkit-transform: rotateX(180deg);
-        opacity: 0;
-    }
-    35% {
-        -webkit-transform: rotateX(120deg);
-        opacity: 0;
-    }
-    65% {
-        opacity: 0;
-    }
-    100% {
-        -webkit-transform: rotateX(360deg);
-        opacity: 1;
-    }
-}
-
-@-moz-keyframes cd-rotate-1-in {
-    0% {
-        -moz-transform: rotateX(180deg);
-        opacity: 0;
-    }
-    35% {
-        -moz-transform: rotateX(120deg);
-        opacity: 0;
-    }
-    65% {
-        opacity: 0;
-    }
-    100% {
-        -moz-transform: rotateX(360deg);
-        opacity: 1;
-    }
-}
-
-@keyframes cd-rotate-1-in {
-    0% {
-        -webkit-transform: rotateX(180deg);
-        -moz-transform: rotateX(180deg);
-        -ms-transform: rotateX(180deg);
-        -o-transform: rotateX(180deg);
-        transform: rotateX(180deg);
-        opacity: 0;
-    }
-    35% {
-        -webkit-transform: rotateX(120deg);
-        -moz-transform: rotateX(120deg);
-        -ms-transform: rotateX(120deg);
-        -o-transform: rotateX(120deg);
-        transform: rotateX(120deg);
-        opacity: 0;
-    }
-    65% {
-        opacity: 0;
-    }
-    100% {
-        -webkit-transform: rotateX(360deg);
-        -moz-transform: rotateX(360deg);
-        -ms-transform: rotateX(360deg);
-        -o-transform: rotateX(360deg);
-        transform: rotateX(360deg);
-        opacity: 1;
-    }
-}
-
-@-webkit-keyframes cd-rotate-1-out {
-    0% {
-        -webkit-transform: rotateX(0deg);
-        opacity: 1;
-    }
-    35% {
-        -webkit-transform: rotateX(-40deg);
-        opacity: 1;
-    }
-    65% {
-        opacity: 0;
-    }
-    100% {
-        -webkit-transform: rotateX(180deg);
-        opacity: 0;
-    }
-}
-
-@-moz-keyframes cd-rotate-1-out {
-    0% {
-        -moz-transform: rotateX(0deg);
-        opacity: 1;
-    }
-    35% {
-        -moz-transform: rotateX(-40deg);
-        opacity: 1;
-    }
-    65% {
-        opacity: 0;
-    }
-    100% {
-        -moz-transform: rotateX(180deg);
-        opacity: 0;
-    }
-}
-
-@keyframes cd-rotate-1-out {
-    0% {
-        -webkit-transform: rotateX(0deg);
-        -moz-transform: rotateX(0deg);
-        -ms-transform: rotateX(0deg);
-        -o-transform: rotateX(0deg);
-        transform: rotateX(0deg);
-        opacity: 1;
-    }
-    35% {
-        -webkit-transform: rotateX(-40deg);
-        -moz-transform: rotateX(-40deg);
-        -ms-transform: rotateX(-40deg);
-        -o-transform: rotateX(-40deg);
-        transform: rotateX(-40deg);
-        opacity: 1;
-    }
-    65% {
-        opacity: 0;
-    }
-    100% {
-        -webkit-transform: rotateX(180deg);
-        -moz-transform: rotateX(180deg);
-        -ms-transform: rotateX(180deg);
-        -o-transform: rotateX(180deg);
-        transform: rotateX(180deg);
-        opacity: 0;
-    }
 }
 
 .empty {
@@ -323,7 +141,7 @@ xrotate-1
 
 .grid {
     padding: 20px 20px 100px 20px;
-    max-width: 1000px;
+    max-width: 1370px;
     margin: 0 auto;
     list-style: none;
     text-align: center;
@@ -331,7 +149,7 @@ xrotate-1
 
 .grid li {
     display: inline-block;
-    width: 400px;
+    width: 1000px;
     margin: 0;
     padding: 20px;
     text-align: left;
@@ -553,4 +371,14 @@ The fill color of the path will be white: .grid svg path {
 .demo-3 .grid a:hover figure button {
     opacity: 1;
     transform: translateY(-50%) translateX(-50%) scale(1);
+}
+
+.home {
+    background-image: url(../images/engineer-wallpaper-1366x768.jpg);
+    height: 768px;
+}
+
+.imgH img {
+    width: 800px;
+    height: 250px;
 }
