--- a/css/app.css
+++ b/css/app.css
@@ -1,47 +1,9 @@
 .container {
-    background: #2B2153;
-    background-size: cover;
+    background: #2F4F4F;
+    font-family: 'Roboto Condensed', sans-serif;
     width: 100%;
-    max-width: 1366 px;
-    /*    background: cover;*/
-}
-
-.navname {
-    color: #4C30C5;
-    font-family: 'Poiret One', cursive;
-    font-size: 25px;
-}
-
-.Aname {
-    color: #4C30C5;
-    font-family: 'Roboto Condensed', sans-serif;
-    font-size: 25px;
-}
-
-.cd-headline {
-    font-size: 3rem;
-    line-height: 1.2;
-}
-
-.cd-headline.loading-bar .cd-words-wrapper {
-    overflow: hidden;
-    vertical-align: top;
-}
-
-.empty {
-    height: 100px;
-}
-
-.projects {
-    height: 300px;
-    width: 1000px;
-}
-
-.titleP {
-    font-size: 50px;
-    font-family: 'Roboto Condensed', sans-serif;
-    color: #120033;
-    text-align: center;
+    max-height: 4000px;
+    height: auto;
 }
 
 
@@ -90,22 +52,19 @@
     outline: none;
 }
 
-
-/* Prospero */
-
 .menu--prospero .menu__link {
     position: relative;
     display: block;
     margin: 0 1.5em;
     padding: 0.75em 0;
     text-align: center;
-    color: #120033;
+    color: #b5b5b5;
     transition: color 0.3s;
 }
 
 .menu--prospero .menu__link:hover,
 .menu--prospero .menu__link:focus {
-    color: #2E3692;
+    color: #929292;
 }
 
 .menu--prospero .menu__item--current .menu__link {
@@ -135,234 +94,12 @@
          Caption Hover Effect
 *******************************************************/
 
-.grid {
-    padding: 20px 20px 100px 20px;
-    max-width: 1300px;
-    margin: 0 auto;
-    list-style: none;
-    text-align: center;
-}
 
-.grid li {
-    display: inline-block;
-    width: 500px;
-    margin: 0;
-    padding: 20px;
-    text-align: left;
-    position: relative;
-}
+/********************************************************
+           Shape hover Effect
+*******************************************************/
 
-.grid figure {
-    margin: 0;
-    position: relative;
-}
-
-.grid figure img {
-    max-width: 100%;
-    display: block;
-    position: relative;
-}
-
-.grid figcaption {
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 20px;
-    background: #2c3f52;
-    color: #ed4e6e;
-}
-
-.grid figcaption h3 {
-    margin: 0;
-    padding: 0;
-    color: #fff;
-}
-
-.grid figcaption span:before {
-    content: 'by ';
-}
-
-.grid figcaption a {
-    text-align: center;
-    padding: 5px 10px;
-    border-radius: 2px;
-    display: inline-block;
-    background: #ed4e6e;
-    color: #fff;
-}
-
-@media screen and (max-width: 31.5em) {
-    .grid {
-        padding: 10px 10px 100px 10px;
-    }
-    .grid li {
-        width: 100%;
-        min-width: 500px;
-    }
-}
-
-.cs-style-1 figcaption {
-    height: 100%;
-    width: 100%;
-    opacity: 0;
-    text-align: center;
-    backface-visibility: hidden;
-    transition: transform 0.3s, opacity 0.3s;
-}
-
-.no-touch .cs-style-1 figure:hover figcaption,
-.cs-style-1 figure.cs-hover figcaption {
-    opacity: 1;
-    transform: translate(15px, 15px);
-}
-
-.cs-style-1 figcaption h3 {
-    margin-top: 70px;
-}
-
-.cs-style-1 figcaption span {
-    display: block;
-}
-
-.cs-style-1 figcaption a {
-    margin-top: 30px;
-}
-
-
-/*************************************************************************Shape hover Effect*****************/
-
-.grid {
-    margin: 40px auto 120px;
-    max-width: 1000px;
-    width: 90%;
-}
-
-.grid a {
-    float: left;
-    max-width: 300px;
-    width: 25%;
-    color: #333;
-}
-
-.grid a:nth-child(odd) {
-    margin: 30px 0 -30px 0;
-}
-
-.grid figure {
-    position: relative;
-    overflow: hidden;
-    margin: 5px;
-    background: #333;
-}
-
-.grid figure img {
-    position: relative;
-    display: block;
-    width: 100%;
-    opacity: 0.7;
-    transition: opacity 0.3s;
-}
-
-.grid figcaption {
-    position: absolute;
-    top: 0;
-    z-index: 11;
-    padding: 10px;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-}
-
-.grid figcaption h2 {
-    margin: 0 0 20px 0;
-    color: #3498db;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    font-weight: 300;
-    font-size: 130%;
-    transition: transform 0.3s;
-}
-
-.grid figcaption p {
-    padding: 0 20px;
-    color: #aaa;
-    font-weight: 300;
-    transition: opacity 0.3s, transform 0.3s;
-}
-
-.grid figcaption h2,
-.grid figcaption p {
-    transform: translateY(50px);
-}
-
-.grid figure button {
-    position: absolute;
-    padding: 4px 20px;
-    border: none;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    font-weight: bold;
-    transition: opacity 0.3s, transform 0.3s;
-}
-
-.grid figcaption,
-.grid figcaption h2,
-.grid figcaption p,
-.grid figure button {
-    backface-visibility: hidden;
-}
-
-.grid svg {
-    position: absolute;
-    top: -1px;
-    /* fixes rendering issue in FF */
-    z-index: 10;
-    width: 100%;
-    height: 100%;
-}
-
-The fill color of the path will be white: .grid svg path {
-    fill: #fff;
-}
-
-.grid a:hover figure img {
-    opacity: 1;
-}
-
-.grid a:hover figcaption h2,
-.grid a:hover figcaption p {
-    transform: translateY(0);
-}
-
-.grid a:hover figcaption p {
-    opacity: 0;
-}
-
-.demo-1 body {
-    background: #3498db;
-}
-
-.demo-1 .grid figure button,
-.demo-3 .grid figure button {
-    top: 50%;
-    left: 50%;
-    border: 3px solid #fff;
-    background: transparent;
-    color: #fff;
-    opacity: 0;
-    transform: translateY(-50%) translateX(-50%) scale(0.25);
-}
-
-.demo-1 .grid a:hover figure button,
-.demo-3 .grid a:hover figure button {
-    opacity: 1;
-    transform: translateY(-50%) translateX(-50%) scale(1);
-}
-
-.home {
-    background-image: url(../images/engineer-wallpaper-1366x768.jpg);
-    height: 768px;
-}
-
-
+.Aname {
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 30px;
 }
