--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ a {
 }
 
 .cd-title h1 {
-    font-size: 1.1rem;
+    font-size: 1rem;
     font-weight: 300;
 }
 
@@ -55,48 +55,48 @@ a {
         height: 200px;
         line-height: 300px;
     }
-    .cd-title h1 {
-        font-size: 3rem;
+    .cd-title h5 {
+        font-size: 1rem;
     }
 }
 
 .cd-intro {
     width: 90%;
-    max-width: 768px;
-    text-align: center;
+    max-width: 1200px;
+    /*    text-align: center;*/
 }
 
 .cd-intro {
-    margin: 4em auto;
+    margin: 1em auto;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 568px) {
     .cd-intro {
-        margin: 5em auto;
+        margin: 1em auto;
     }
 }
 
-@media only screen and (min-width: 1170px) {
+@media only screen and (min-width: 900px) {
     .cd-intro {
-        margin: 6em auto;
+        margin: 1em auto;
     }
 }
 
 .cd-headline {
-    font-size: 3rem;
+    font-size: 1rem;
     line-height: 1.2;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 568px) {
     .cd-headline {
-        font-size: 4.4rem;
+        font-size: 1.1rem;
         font-weight: 300;
     }
 }
 
-@media only screen and (min-width: 1170px) {
+@media only screen and (min-width: 900px) {
     .cd-headline {
-        font-size: 6rem;
+        font-size: 2rem;
     }
 }
 
