--- a/css/app.css
+++ b/css/app.css
@@ -3,7 +3,7 @@
     font-family: 'Roboto Condensed', sans-serif;
     width: 100%;
     max-height: 1366px;
-    height: 1500px;
+    height: 1800px;
 }
 
 
@@ -307,6 +307,21 @@
 
 .grid a:hover figcaption p {
     opacity: 0;
+}
+
+.demo-3 .grid figure button {
+    top: 50%;
+    left: 50%;
+    border: 3px solid #fff;
+    background: transparent;
+    color: #fff;
+    opacity: 0;
+    transform: translateY(-50%) translateX(-50%) scale(0.25);
+}
+
+.demo-3 .grid a:hover figure button {
+    opacity: 1;
+    transform: translateY(-50%) translateX(-50%) scale(1);
 }
 
 
