set background image

--- a/css/app.css
+++ b/css/app.css
@@ -421,6 +421,7 @@
 
 .home {
     background-image: url(../images/engineer-wallpaper-1366x768.jpg);
+    background-size: contain;
     background-repeat: no-repeat;
     height: 500px;
     position: relative;
