--- a/css/app.css
+++ b/css/app.css
@@ -421,7 +421,8 @@
 
 .home {
     background-image: url(../images/engineer-wallpaper-1366x768.jpg);
-    background-size: contain;
+    background-size: cover;
+    width: 100%;
     background-repeat: no-repeat;
     height: 500px;
     position: relative;
