--- a/css/app.css
+++ b/css/app.css
@@ -1,443 +1,22 @@
 .container {
-    background: #2F4F4F;
+    background: #010D2A;
     font-family: 'Roboto Condensed', sans-serif;
     width: 100%;
     max-height: 1366px;
     height: 1800px;
 }
 
-
-/*******************************************************
-             Line Menu Styles
-*******************************************************/
-
-.menu {
-    line-height: 1;
-    margin: 0 auto 3em;
-}
-
-.menu__list {
-    position: relative;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-flex-wrap: wrap;
-    flex-wrap: wrap;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-.menu__item {
-    display: block;
-    margin: 1em 0;
-}
-
-.menu__link {
-    font-size: 1.05em;
-    font-weight: bold;
-    display: block;
-    padding: 1em;
-    cursor: pointer;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    -webkit-touch-callout: none;
-    -khtml-user-select: none;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-
-.menu__link:hover,
-.menu__link:focus {
-    outline: none;
-}
-
-.menu--prospero .menu__link {
-    position: relative;
-    display: block;
-    margin: 0 1.5em;
-    padding: 0.75em 0;
-    text-align: center;
-    color: #b5b5b5;
-    transition: color 0.3s;
-}
-
-.menu--prospero .menu__link:hover,
-.menu--prospero .menu__link:focus {
-    color: #929292;
-}
-
-.menu--prospero .menu__item--current .menu__link {
-    color: #d94f5c;
-}
-
-.menu--prospero .menu__link::before {
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 4px;
-    background: #d94f5c;
-    transform: scale3d(0, 1, 1);
-    transition: transform 0.1s;
-}
-
-.menu--prospero .menu__item--current .menu__link::before {
-    transform: scale3d(1, 1, 1);
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    transition-duration: 0.3s;
-}
-
-
-/*******************************************************
-         Caption Hover Effect
-*******************************************************/
-
-
-/*
-.grid {
-    padding: 20px 20px 100px 20px;
-    max-width: 1300px;
-    margin: 0 auto;
-    list-style: none;
-    text-align: center;
-}
-
-.grid li {
-    display: inline-block;
-    width: 440px;
-    margin: 0;
-    padding: 20px;
-    text-align: left;
-    position: relative;
-}
-
-.grid figure {
-    margin: 0;
-    position: relative;
-}
-
-.grid figure img {
-    max-width: 100%;
-    display: block;
-    position: relative;
-}
-
-.grid figcaption {
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 20px;
-    background: #2c3f52;
-    color: #ed4e6e;
-}
-
-.grid figcaption h3 {
-    margin: 0;
-    padding: 0;
-    color: #fff;
-}
-
-.grid figcaption span:before {
-    content: 'by ';
-}
-
-.grid figcaption a {
-    text-align: center;
-    padding: 5px 10px;
-    border-radius: 2px;
-    display: inline-block;
-    background: #ed4e6e;
-    color: #fff;
-}
-
-@media screen and (max-width: 31.5em) {
-    .grid {
-        padding: 10px 100px 100px 10px;
-    }
-    .grid li {
-        width: 100%;
-        min-width: 300px;
-    }
-}
-
-.cs-style-5 figure img {
-    z-index: 10;
-    transition: transform 0.4s;
-}
-
-.no-touch .cs-style-5 figure:hover img,
-.cs-style-5 figure.cs-hover img {
-    transform: scale(0.4);
-}
-
-.cs-style-5 figcaption {
-    height: 100%;
-    width: 100%;
-    opacity: 0;
-    transform: scale(0.7);
-    backface-visibility: hidden;
-    transition: transform 0.4s, opacity 0.4s;
-}
-
-.no-touch .cs-style-5 figure:hover figcaption,
-.cs-style-5 figure.cs-hover figcaption {
-    transform: scale(1);
-    opacity: 1;
-}
-
-.cs-style-5 figure a {
-    position: absolute;
-    bottom: 20px;
-    right: 20px;
-}
-*/
-
-
-/*css for portfolio on components */
-
-
-/*******************************************************
-           Shape hover Effect
-*******************************************************/
-
-
-/*.grid {
-    margin: 40px auto 120px;
-    max-width: 1000px;
-    width: 90%;
-}
-
-.grid a {
-    float: left;
-    max-width: 250px;
-    width: 25%;
-    color: #333;
-}
-
-.grid a:nth-child(odd) {
-    margin: 30px 0 -30px 0;
-}
-
-.grid figure {
-    position: relative;
-    overflow: hidden;
-    margin: 5px;
-    background: #333;
-}
-
-.grid figure img {
-    position: relative;
-    display: block;
-    width: 100%;
-    opacity: 0.7;
-    transition: opacity 0.3s;
-}
-
-.grid figcaption {
-    position: absolute;
-    top: 0;
-    z-index: 11;
-    padding: 10px;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-}
-
-.grid figcaption h2 {
-    margin: 0 0 20px 0;
-    color: #3498db;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    font-weight: 300;
-    font-size: 130%;
-    transition: transform 0.3s;
-}
-
-.grid figcaption p {
-    padding: 0 20px;
-    color: #aaa;
-    font-weight: 300;
-    transition: opacity 0.3s, transform 0.3s;
-}
-
-.grid figcaption h2,
-.grid figcaption p {
-    transform: translateY(50px);
-}
-
-.grid figure button {
-    position: absolute;
-    padding: 4px 20px;
-    border: none;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    font-weight: bold;
-    transition: opacity 0.3s, transform 0.3s;
-}
-
-.grid figcaption,
-.grid figcaption h2,
-.grid figcaption p,
-.grid figure button {
-    backface-visibility: hidden;
-}
-
-.grid svg {
-    position: absolute;
-    top: -1px;
-    /* fixes rendering issue in FF */
-
-
-/*  z-index: 10;
-    width: 100%;
-    height: 100%;
-}
-
-.grid svg path {
-    fill: #fff;
-}
-
-.grid a:hover figure img {
-    opacity: 1;
-}
-
-.grid a:hover figcaption h2,
-.grid a:hover figcaption p {
-    transform: translateY(0);
-}
-
-.grid a:hover figcaption p {
-    opacity: 0;
-}
-
-.demo-3 .grid figure button {
-    top: 50%;
-    left: 50%;
-    border: 3px solid #fff;
-    background: transparent;
-    color: #fff;
-    opacity: 0;
-    transform: translateY(-50%) translateX(-50%) scale(0.25);
-}
-
-.demo-3 .grid a:hover figure button {
-    opacity: 1;
-    transform: translateY(-50%) translateX(-50%) scale(1);
-}
-
-
-/*
-.demo-2 .grid figcaption h2,
-/*.demo-2 .grid figcaption p,
-*/
-
-
-/*
-.demo-3 .grid figcaption h2,
-.demo-3 .grid figcaption p {
-    timing-function: cubic-bezier(0.250, 0.250, 0.115, 1.445);
-}
-
-
-/*.demo-2 .grid a:hover figcaption p,*/
-
-
-/*
-.demo-3 .grid a:hover figcaption p {
-    transition-delay: 0s;
-    transition-duration: 0.1s;
-}
-
-.demo-3 body {
-    background: #52be7f;
-}
-
-.demo-3 .grid figcaption h2 {
-    color: #52be7f;
-}
-
-.demo-3 .grid a:hover figcaption h2 {
-    transform: translateY(5px);
-}
-
-@media screen and (max-width: 58em) {
-    .grid a {
-        width: 33.333%;
-    }
-    .grid a:nth-child(odd) {
-        margin: 0;
-    }
-    .grid a:nth-child(3n-1) {
-        margin: 30px 0 -30px 0;
-    }
-}
-
-@media screen and (max-width: 45em) {
-    .grid {
-        max-width: 500px;
-    }
-    .grid a {
-        width: 50%;
-    }
-    .grid a:nth-child(3n-1) {
-        margin: 0;
-    }
-    .grid a:nth-child(even) {
-        margin: 30px 0 -30px 0;
-    }
-    .grid figcaption h2 {
-        margin-bottom: 0px;
-        transform: translateY(30px);
-    }
-    .grid figcaption p {
-        margin: 0;
-        padding: 0 10px;
-    }
-}
-
-@media screen and (max-width: 27em) {
-    .grid {
-        max-width: 250px;
-    }
-    .grid a {
-        width: 100%;
-    }
-    .grid a:nth-child(even) {
-        margin: 0;
-    }
-}
-
-
-/*******************************************************
-        main body related css
-*******************************************************/
-
-.Aname {
-    font-family: 'Roboto Condensed', sans-serif;
-    font-size: 30px;
+.overlay {
+    opacity: 0.8;
+    background: #fff;
 }
 
 .home {
     background-image: url(../images/engineer-wallpaper-1366x768.jpg);
-    background-size: cover;
     background-attachment: fixed;
-    width: 100%;
     background-repeat: no-repeat;
-    height: 500px;
-    position: relative;
-    background-position: center
-}
-
-.overlay {
-    height: 500px;
+    background-size: contain;
     width: 100%;
-    opacity: 0.9;
-    background-color: black;
-}
-
-.title {
-    font-size: 35px;
-
+    max-width: 1366px;
+    height: 768px;
 }
