--- a/css/app.css
+++ b/css/app.css
@@ -20,3 +20,146 @@
     max-width: 1366px;
     height: 768px;
 }
+
+
+/***********************nav bar*******************************/
+
+.link-copy {
+    position: absolute;
+    top: 2em;
+    right: 2em;
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+    background: url(../img/link.svg) no-repeat center center;
+    background-size: cover;
+}
+
+.link-copy::after {
+    content: 'Click to copy direct link';
+    font-size: 0.85em;
+    font-weight: bold;
+    position: absolute;
+    right: 100%;
+    margin: 0 1em 0 0;
+    white-space: nowrap;
+    pointer-events: none;
+    opacity: 0;
+    color: #ddd;
+    -webkit-transform: translate3d(10px, 0, 0);
+    transform: translate3d(10px, 0, 0);
+    -webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
+    transition: transform 0.3s, opacity 0.3s;
+}
+
+.link-copy:hover::after {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+}
+
+.link-copy::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 50px;
+    height: 50px;
+    margin: -25px 0 0 -25px;
+    opacity: 0;
+    border-radius: 50%;
+    background: #d94f5c;
+}
+
+.link-copy--animate::before {
+    -webkit-animation: pulse 0.3s;
+    animation: pulse 0.3s;
+}
+
+.menu--viola .menu__item {
+    position: relative;
+    margin: 0 1em;
+}
+
+.menu--viola .menu__link {
+    position: relative;
+    display: block;
+    text-align: center;
+    color: #929292;
+    -webkit-transition: color 0.4s;
+    transition: color 0.4s;
+}
+
+.menu--viola .menu__link:hover,
+.menu--viola .menu__link:focus {
+    color: #fff;
+}
+
+.menu--viola .menu__item--current .menu__link {
+    color: #d94f5c;
+}
+
+.menu--viola .menu__item::before,
+.menu--viola .menu__item::after,
+.menu--viola .menu__link::before,
+.menu--viola .menu__link::after {
+    content: '';
+    position: absolute;
+    background: #d94f5c;
+    -webkit-transition: -webkit-transform 0.2s;
+    transition: transform 0.2s;
+}
+
+.menu--viola .menu__item::before,
+.menu--viola .menu__item::after {
+    top: 0;
+    width: 2px;
+    height: 100%;
+    -webkit-transform: scale3d(1, 0, 1);
+    transform: scale3d(1, 0, 1);
+}
+
+.menu--viola .menu__item::before {
+    left: 0;
+    -webkit-transform-origin: 50% 100%;
+    transform-origin: 50% 100%;
+}
+
+.menu--viola .menu__item::after {
+    right: 0;
+    -webkit-transform-origin: 50% 0%;
+    transform-origin: 50% 0%;
+}
+
+.menu--viola .menu__link::before,
+.menu--viola .menu__link::after {
+    left: 0;
+    width: 100%;
+    height: 2px;
+    -webkit-transform: scale3d(0, 1, 1);
+    transform: scale3d(0, 1, 1);
+}
+
+.menu--viola .menu__link::before {
+    top: 0;
+    -webkit-transform-origin: 0 50%;
+    transform-origin: 0 50%;
+}
+
+.menu--viola .menu__link::after {
+    bottom: 0;
+    -webkit-transform-origin: 100% 50%;
+    transform-origin: 100% 50%;
+}
+
+.menu--viola .menu__item--current::before,
+.menu--viola .menu__item--current::after,
+.menu--viola .menu__item--current .menu__link::before,
+.menu--viola .menu__item--current .menu__link::after {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+    -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+}
