--- a/css/nav/component.css
+++ b/css/nav/component.css
@@ -22,8 +22,8 @@
 }
 
 .menu__link {
-    font-size: 1.05em;
-    font-weight: bold;
+    font-size: 1.5em;
+    font-weight: bolder;
     display: block;
     padding: 0em;
     cursor: pointer;
