--- a/css/app.css
+++ b/css/app.css
@@ -3,11 +3,11 @@
     font-family: 'Roboto Condensed', sans-serif;
     width: 100%;
     max-height: 1366px;
-    height: 1800px;
+    height: 100%;
 }
 
 .overlay {
-    opacity: 0.8;
+    opacity: 0.75;
     background: #fff;
 }
 
@@ -22,4 +22,10 @@
 }
 
 
-/***********************nav bar*******************************/
+/***********************about us******************************/
+
+.about {
+    background: #B0BEA9;
+    width: 100%;
+    height: 700px;
+}
