--- a/css/app.css
+++ b/css/app.css
@@ -208,6 +208,7 @@
 .centre {
     text-align: center;
     background: #010D2A;
+    color: #B0BEA9;
 }
 
 .hi {
@@ -741,6 +742,7 @@
     max-width: 100%;
     background-size: cover;
     background-attachment: fixed;
+    background: #77BFA3;
     /*
     background-color: #1D1F21;
     color: white;
